Added database connection and initial migration

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-3VPMTDO\\SQLEXPRESS;Database=RentMe_DEV;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
