--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-3VPMTDO\\SQLEXPRESS;Database=RentMe_DEV;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": "Information",
@@ -11,8 +14,7 @@
         "Args": {
           "path": "/logs/log-.txt",
           "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true,
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter"
+          "rollOnFileSizeLimit": true
         }
       }
     ],
