Added unit of work, repository pattern and mapster

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -8,11 +8,19 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="MediatR" Version="12.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositories\Apartment\" />
+    <Folder Include="Repositories\Hotel\" />
+    <Folder Include="Repositories\Catalog\" />
   </ItemGroup>
 
 </Project>
