--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Apartment\" />
+    <Folder Include="Controllers\Hotel\" />
+    <Folder Include="Controllers\Administration\" />
+  </ItemGroup>
+
 </Project>
