Added result pattern and expanded fluent validation

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DTOs\" />
     <Folder Include="Repositories\Apartment\" />
     <Folder Include="Repositories\Hotel\" />
     <Folder Include="Repositories\Catalog\" />
