--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -7,5 +7,30 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SupaBase": {
+    "ProjectUrl": "https://grajfqhdcnihcevmfgwr.supabase.co"
+  },
+  "Auth": {
+    "ValidIssuer": "https://grajfqhdcnihcevmfgwr.supabase.co/auth/v1",
+    "ValidAudience": "authenticated"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/log-.txt",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ]
   }
 }
