--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-3VPMTDO\\SQLEXPRESS;Database=RentMe_DEV;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-UUU3ELV\\SQLEXPRESS;Database=RentMe_DEV;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -16,7 +16,10 @@
     "ValidAudience": "authenticated"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Debug",
     "WriteTo": [
       {
@@ -31,6 +34,9 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ]
   }
 }
